# tftp_agent

./: .gitignore  .gitmodules  CMakeLists.txt  NOTES  README.md  conanfile.txt
src/: CMakeLists.txt
src/Agent/: ArgParser.h  Packer.cpp  Packer.h  main.cpp
src/Transport/: TFTPClient.cpp  TFTPClient.h  TFTPPacket.h  TFTPPacketTypes.h
src/Transport/UDPSocket/: UDPSocket.cpp  UDPSocket.h
src/agent/: main.cpp
src/transport/: data  tftp_client.cpp  tftp_client.h  tftp_packet.h
src/transport/udp_socket/: udp_socket.cpp  udp_socket.h  win_udp_socket_.cpp
test/: CMakeLists.txt  UnittestTFTPClient.cpp  data_500b.txt  data_512b.txt  test.cpp  tfpclient_test.cpp  tftpclient_test.h
test/mock/: MockUdpSocket.h
test/test_data/: data_2000B.txt  data_500b.txt  data_5kb.txt
